--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ffmpeg-source"]
 	path = ffmpeg-source
-	url = git@github.com:FFmpeg/FFmpeg.git
+	url = git@github.com:ksvc/FFmpeg.git
 [submodule "ffmpeg-windows-build-helpers"]
 	path = ffmpeg-windows-build-helpers
 	url = git@github.com:rdp/ffmpeg-windows-build-helpers.git
