--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "ffmpeg-source"]
-	path = ffmpeg-source
-	url = git@github.com:ksvc/FFmpeg.git
 [submodule "ffmpeg-windows-build-helpers"]
 	path = ffmpeg-windows-build-helpers
 	url = git@github.com:rdp/ffmpeg-windows-build-helpers.git
+[submodule "ffmpeg-source"]
+	path = ffmpeg-source
+	url = https://github.com/ksvc/FFmpeg.git
