--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        os: [win64, win32]
+        os: [win64]
         
     steps:
       - name: Checkout
@@ -84,7 +84,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [win64, win32]
+        os: [win64]
         
     steps:
       - name: Download FFmpeg ${{ matrix.os }} nonfree
